<resources>
    <string name="app_name">Weather App</string>
    <string name="lab_location">Location:</string>
    <string name="lab_latitude">Latitude:</string>
    <string name="lab_longitude">Longitude:</string>
    <string name="lab_high">High:</string>
    <string name="lab_low">Low:</string>
    <string name="lab_current">Current:</string>
    <string name="lab_feels_like">Feels Like:</string>
    <string name="lab_humidity">Humidity:</string>
    <string name="lab_pressure">Pressure:</string>


    <string-array name="locations">
        <item>Bakersfield,CA,USA</item>
        <item>Las Vegas,NV,USA</item>
        <item>Kalispell,MT,USA</item>
        <item>New York,NY,USA</item>
        <item>Orlando,FL,USA</item>
        <item>Anchorage,AK,USA</item>
        <item>Zug,EH</item>
    </string-array>
</resources>